--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.5"
   }
 }
