--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "bootstrap": "^5.2.2",
     "next": "^13.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   },
   "scripts": {
     "dev": "next dev",
