--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.2",
+    "gray-matter": "^4.0.3",
     "next": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
