--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "bootstrap": "^5.2.2",
     "gray-matter": "^4.0.3",
     "next": "^13.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "remark-html": "^15.0.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "dev": "next dev",
