--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -6,6 +6,8 @@ name: Deploy Next.js site to Pages
 
 on:
   # Runs on pushes targeting the default branch
+  push:
+    branches: ["master"]
   schedule:
     - cron: "0 0 * * *"
 
