--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "bootstrap": "^5.2.2",
     "gray-matter": "^4.0.3",
     "next": "^13.0.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-katex": "^6.0.2",
+    "rehype-slug": "^5.1.0",
+    "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.1",
+    "remark-math": "^5.1.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
     "typescript": "^4.8.4"
   },
   "scripts": {
