--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
     "@types/react-dom": "^18.0.8",
     "bootstrap": "^5.2.2",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.6.0",
     "next": "^13.0.2",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.1",
     "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
