--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "highlight.js": "^11.6.0",
     "next": "^13.0.2",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-document": "^6.1.0",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "rehype-slug": "^5.1.0",
@@ -24,9 +25,18 @@
     "dev": "next dev",
     "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.5"
+    "@types/bootstrap": "^5.2.5",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
